chore: add deploy docs and env template

--- a/.env.example
+++ b/.env.example
@@ -1,81 +1,17 @@
-# SOLARIA Digital Field Operations - Environment Configuration
-# Copy this file to .env and fill in your values
-# IMPORTANT: Never commit .env to version control!
-
-# ===========================================
-# REQUIRED SECRETS (must be set before running)
-# ===========================================
-
-# Database password (used by MySQL and PostgreSQL)
-# Generate with: openssl rand -base64 24
-DB_PASSWORD=your_secure_database_password_here
-
-# MySQL root password
-# Generate with: openssl rand -base64 24
-MYSQL_ROOT_PASSWORD=your_mysql_root_password_here
-
-# JWT Secret for authentication
-# Generate with: openssl rand -hex 32
-JWT_SECRET=your_jwt_secret_key_here_minimum_32_characters
-
-# MinIO Object Storage credentials
-# Username: min 3 chars, Password: min 8 chars
+# Core secrets
+DB_PASSWORD=change_me
+MYSQL_ROOT_PASSWORD=change_me_root
+JWT_SECRET=change_me_jwt
 MINIO_ROOT_USER=solaria_admin
-MINIO_ROOT_PASSWORD=your_minio_password_here_min_8_chars
+MINIO_ROOT_PASSWORD=change_me_minio
+OPENAI_API_KEY=
 
-# ===========================================
-# OPTIONAL - AI Configuration
-# ===========================================
-
-# OpenAI API Key (for AI agent features)
-OPENAI_API_KEY=sk-your-openai-key-here
-
-# Anthropic API Key (for Claude agent features)
-ANTHROPIC_API_KEY=sk-ant-your-key-here
-
-# AI Settings
-AI_MODEL=gpt-4
-AI_TEMPERATURE=0.3
-AI_MAX_TOKENS=4000
-
-# ===========================================
-# AUTO-DEPLOY / CI Configuration
-# ===========================================
-
-# Enable non-interactive mode for CI/CD pipelines
-CI_MODE=false
-
-# Repository path for automatic project ingestion
-REPO_PATH=
-
-# Project configuration for auto-deploy
-PROJECT_NAME=
-PROJECT_TYPE=software
-
-# ===========================================
-# Application Configuration
-# ===========================================
-
+# App
 NODE_ENV=production
-LOG_LEVEL=info
-DEBUG=false
+PORT=3000
 
-# Security
-CORS_ORIGIN=http://localhost:3000
-RATE_LIMIT_WINDOW_MS=60000
-RATE_LIMIT_MAX_REQUESTS=1000
-
-# ===========================================
-# Optional Services
-# ===========================================
-
-# Email Configuration (for notifications)
-SMTP_HOST=
-SMTP_PORT=587
-SMTP_USER=
-SMTP_PASS=
-
-# Backup Configuration
-BACKUP_ENABLED=false
-BACKUP_SCHEDULE=0 2 * * *
-BACKUP_RETENTION_DAYS=30
+# Repo path for docs ingestion (adjust if different location)
+REPO_PATH=/Users/carlosjperez/Documents/GitHub/akademate.com
+PROJECT_NAME=Akademate
+PROJECT_TYPE=software
+CI_MODE=true
